--- a/src/components/signin/signin.styles.scss
+++ b/src/components/signin/signin.styles.scss
@@ -3,4 +3,14 @@
     width: 30vw;
     display: flex;
     flex-direction: column;
+
+    .title {
+      margin: 10px 0;
+    }
+  
+    .buttons {
+      display: flex;
+      justify-content: space-between;
+    }
+    
   }
